--- a/Teapot.html
+++ b/Teapot.html
@@ -3,6 +3,13 @@
 <head>
 <title>Po-Han Huang's Teapot Globe</title>
 <meta charset="utf-8">
+<meta property="og:title" content="Po-Han Huang's Teapot Globe">
+<meta property="og:url" content="https://phuang17.github.io/SideProjects/TeapotGlobe/Teapot.html">
+<meta property="og:image" content="https://phuang17.github.io/img/teapot_preview.png">
+<meta property="og:description" content="Reflecting Teapot Globe implemented in WebGL.">
+<meta name="description" content="Reflecting Teapot Globe implemented in WebGL.">
+<meta name="keywords" content="Po-Han Huang, WebGL, CS418, University of Illinois at Urbana-Champaign, Computer Graphics, Teapot Globe">
+<meta name="author" content="Po-Han Huang">
 
 <!-- All srcipts -->
 <script type="text/javascript" src="gl-matrix-min.js"></script>
@@ -42,10 +49,6 @@
     <p><input type="checkbox" onclick="toggleLight(this.checked);" checked>Light</input></p>
     <p><input type="checkbox" onclick="toggleReflection(this.checked);" checked>Reflection</input></p>
     <p><input type="checkbox" onclick="toggleNormal(this.checked);" checked>Normal Mapping</input></p>
-    <br><br><br>
-    <p>I do not own the images. Their sources are listed below:</p>
-    <p>The environment map is taken from <a href="http://www.humus.name/index.php?page=Textures&ID=137">here</a> with CC-BY license.</p>
-    <p>The normal map is taken from <a href="http://www.celestiamotherlode.net/catalog/earthbumpspec.php">here</a>.</p>
   </div>
 
   <!-- Interface Control -->
@@ -244,7 +247,7 @@
                     + ((uDiffuseLight * vVertexColor) * diffuseLightWeighting)
                     + ( uSpecularLight * specularLightWeighting),
                       1.0 );
-      gl_FragColor += vec4(textureCube(uEnv, worldNormal).rgb * uReflectionEnable, 0.0);
+      gl_FragColor += vec4(textureCube(uEnv, normalize(reflect(-vectorView, worldNormal))).rgb * uReflectionEnable, 0.0);
     }
 
     </div>
